updated ouput of api to not be an array of values, also added geoid
